--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^10.16.16",
     "gsap": "^3.12.3",
     "locomotive-scroll": "^4.1.4",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.5.3",
     "react-locomotive-scroll": "^0.2.2",
     "react-scroll-parallax": "^3.4.5"
   },
